Changed styles for inputs and fixed horizontal scroll

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -50,23 +50,21 @@
   }
   &__button {
     display: grid;
-    place-content: center;
+    place-items: center;
     font-weight: 700;
-    font-style: bold;
     text-decoration: none;
-    color: #292929;
-    box-sizing: border-box;
-    border: 2px solid #f0f1f4;
-    background-color: #f8f8fa;
-    cursor: pointer;
-
-    @include hover(transform, scale(1.1));
-
-    padding-inline: 16px;
-    padding-block: 14.5px;
+    color: #fff;
+    background-color: #292929;
     border-radius: 8px;
     height: 56px;
     width: 100%;
+    border: none;
+    color: #292929;
+    border: 2px solid #f0f1f4;
+    background-color: #f8f8fa;
+    box-sizing: border-box;
+
+    @include hover(transform, scale(1.1));
 
     &:hover {
       color: #292929;
