--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -13,6 +13,7 @@
   &__body {
     margin: 0;
     min-width: 320px;
+    overflow-x: hidden;
   }
 
   &__menu {
