--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -58,6 +58,7 @@
   box-sizing: border-box;
   border: none;
   background-color: #f8f8fa;
+  color: #292929;
 
   padding-inline: 16px;
   padding-block: 14px;
@@ -66,4 +67,20 @@
   width: 100%;
 
   margin-bottom: 16px;
+
+  &:hover {
+    border: 1px solid #D5D7DE;
+    font-weight: 400;
+
+    &::placeholder {
+      color: #292929;
+      opacity: 1;
+    }
+  }
+
+  &:focus {
+    border: 1px solid #292929;
+    outline: none;
+    font-weight: 400;
+  }
 }
